added box-shadow to galleryitem css

--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -19,6 +19,7 @@
     height: 265px;
     width: 200px;
     text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .imgFooter {
@@ -31,3 +32,4 @@
 .data {
     margin: 20px;
 }
+
